# Music-Managing-System

./: .clang-format  .gitignore  CMakeLists.txt  README.md  \
MMSUtils/: CMakeLists.txt  MMSUtils.def
MMSUtils/include/: types.h
MMSUtils/src/: utils.c
MusicManagingSystem/: CMakeLists.txt  MusicManagingSystem.def
MusicManagingSystem/include/: song.h  types.h  utils.h
MusicManagingSystem/src/: utils.c
tests/: CMakeLists.txt
tests/src/: test.c  test_utils.c
ui/: CMakeLists.txt
ui/include/: ui.h
ui/src/: ui.c
